--- a/_modules/dnachisel/builtin_specifications/AvoidPattern.html
+++ b/_modules/dnachisel/builtin_specifications/AvoidPattern.html
@@ -250,7 +250,6 @@
 <span class="kn">from</span> <span class="nn">..Specification.SpecEvaluation</span> <span class="k">import</span> <span class="n">SpecEvaluation</span>
 
 
-
 <div class="viewcode-block" id="AvoidPattern"><a class="viewcode-back" href="../../../ref/builtin_specifications.html#dnachisel.builtin_specifications.AvoidPattern">[docs]</a><span class="k">class</span> <span class="nc">AvoidPattern</span><span class="p">(</span><span class="n">Specification</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Enforce that the given pattern is absent in the sequence.</span>
 
@@ -264,7 +263,18 @@
 
 <span class="sd">    location</span>
 <span class="sd">      Location of the DNA segment on which to enforce the pattern e.g.</span>
-<span class="sd">      ``Location(10, 45, 1)``</span>
+<span class="sd">      ``Location(10, 45, 1)``. For patterns which are not palyndromic,</span>
+<span class="sd">      the strand matters! use +1 for eliminating the pattern on the +1 strand</span>
+<span class="sd">      only, -1 for eliminating the pattern on the -1 strand, and 0 for</span>
+<span class="sd">      eliminating the pattern on both strands.</span>
+
+<span class="sd">    strand</span>
+<span class="sd">      Alternative way to set the strand, meant to be used in two cases only:</span>
+<span class="sd">      (1) in a Genbank annotation by setting ``strand=both`` to indicate that</span>
+<span class="sd">      the pattern should be avoided on both strands (otherwise, only the</span>
+<span class="sd">      feature&#39;s strand will be considered).</span>
+<span class="sd">      (2) if you want to create a specification without preset location, but</span>
+<span class="sd">      with a set strand: ``AvoidPattern(&#39;BsmBI_site&#39;, strand=1)``</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
 
@@ -272,12 +282,21 @@
     <span class="n">priority</span> <span class="o">=</span> <span class="mi">1</span>
     <span class="n">shorthand_name</span> <span class="o">=</span> <span class="s2">&quot;no&quot;</span>  <span class="c1"># will appear as, for instance, @no(BsmBI_site)</span>
 
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">pattern</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">location</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">boost</span><span class="o">=</span><span class="mf">1.0</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span>
+        <span class="bp">self</span><span class="p">,</span> <span class="n">pattern</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">location</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">strand</span><span class="o">=</span><span class="s2">&quot;from_location&quot;</span><span class="p">,</span> <span class="n">boost</span><span class="o">=</span><span class="mf">1.0</span>
+    <span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Initialize.&quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">pattern</span><span class="p">,</span> <span class="nb">str</span><span class="p">):</span>
             <span class="n">pattern</span> <span class="o">=</span> <span class="n">SequencePattern</span><span class="o">.</span><span class="n">from_string</span><span class="p">(</span><span class="n">pattern</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">pattern</span> <span class="o">=</span> <span class="n">pattern</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">location</span> <span class="o">=</span> <span class="n">Location</span><span class="o">.</span><span class="n">from_data</span><span class="p">(</span><span class="n">location</span><span class="p">)</span>
+        <span class="k">if</span> <span class="n">strand</span> <span class="o">!=</span> <span class="s2">&quot;from_location&quot;</span><span class="p">:</span>
+            <span class="k">if</span> <span class="n">strand</span> <span class="o">==</span> <span class="s2">&quot;both&quot;</span><span class="p">:</span>
+                <span class="n">strand</span> <span class="o">=</span> <span class="mi">0</span>
+            <span class="k">if</span> <span class="n">strand</span> <span class="ow">not</span> <span class="ow">in</span> <span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">1</span><span class="p">]:</span>
+                <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;unknown strand: </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="n">strand</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">location</span><span class="o">.</span><span class="n">strand</span> <span class="o">=</span> <span class="n">strand</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">strand</span> <span class="o">=</span> <span class="n">strand</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">boost</span> <span class="o">=</span> <span class="n">boost</span>
 
     <span class="k">def</span> <span class="nf">evaluate</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">problem</span><span class="p">):</span>
